force-app/main/default/objects/Open_Order_Processing__c/Open_Order_Processing__c.object-meta.xml
<CustomObject>
    <label>Open Order Processing</label>
    <nameField>
        <label>Open Order Processing</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open_Order_Processing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>