force-app/main/default/objects/Open_Order_Processing__c/fields/CC_Order__c.field-meta.xml
<CustomField>
    <fullName>CC_Order__c</fullName>
    <label>CC Order</label>
    <length>18</length>
    <type>Text</type>
</CustomField>