force-app/main/default/objects/Open_Order_Processing__c/fields/CFS_InvoiceCredit__c.field-meta.xml
<CustomField>
    <fullName>CFS_InvoiceCredit__c</fullName>
    <label>CFS Invoice/Credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>