force-app/main/default/objects/Open_Order_Processing__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <label>Invoice Amount</label>
    <length>16</length>
    <type>Text</type>
</CustomField>